2011-10-22  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/s390_64/logops_n.asm: New file.

	* mpn/s390_64/aors_n.asm: New file, with rewritten add/sub code.

2011-10-20  Torbjorn Granlund  <tege@gmplib.org>

	* tune/speed.h (SPEED_ROUTINE_MPN_SQR_DIAL_ADDLSH1_CALL): New macro.
	* tune/common.c (speed_mpn_sqr_diag_addlsh1): New function.
	* tune/speed.c (routine): Measure mpn_sqr_diag_addlsh1.

	* mpn/s390_64/sqr_diag_addlsh1.asm: Rewrite like s390_32/esame code.

	* mpn/s390_32/esame/sqr_diag_addlsh1.asm: Save just needed registers.

2011-10-19  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/s390_32/esame/add_n.asm: Rewrite, similar to s390_64 code.
	* mpn/s390_32/esame/add_n.asm: Likewise.

2011-10-17  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/s390_32/esame/aorslsh1_n.asm: New file.

2011-10-16  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/s390_32/esame/sqr_diag_addlsh1.asm: New file.

	* mpn/s390_32/copyi.asm: New file.
	* mpn/s390_32/copyd.asm: New file.

	* mpn/s390_64/copyd.asm: Optimise.

	* mpn/s390_64/copyi.asm: Rewrite along the lines of glibc memcpy.

	* mpn/s390_64/aorslsh1_n.asm: New file.

	* mpn/s390_64/mod_34lsub1.asm: New file.

	* mpn/s390_64/sqr_diag_addlsh1.asm: New file.

2011-10-15  Torbjorn Granlund  <tege@gmplib.org>

	* configure.in (s390): Rewrite support to handle known CPUs.
	* config.guess: Recognise s390 CPUs.
	* config.sub: Match s390 CPUs.
	* acinclude.m4 (S390_PATTERN, S390X_PATTERN): New defines.

2011-10-14  Torbjorn Granlund  <tege@gmplib.org>

	From Per Olofsson:
	* mpn/generic/popham.c: Add __GMP_NOTHROW to make it match gmp.h.
	* mpn/generic/gcd_1.c: Separate declarations and initialisers for the
	benefit of C++.

	* configure.in: AC_DEFINE HAVE_HOST_CPU_s390_zarch.
	* longlong.h (s390): Use it.
	(s390 umul_ppmm): Fix typo in pure C variant.

2011-10-13  Torbjorn Granlund  <tege@gmplib.org>

	* longlong.h (s390): Put back an accidentally deleted #else.

	* configure.in (s390): Unset extra_functions for s390x.
